# practice-rust

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
chapters/: README.md
chapters/ch01_hello_world/: Cargo.toml
chapters/ch02_guessing_game/: Cargo.toml
chapters/ch02_guessing_game/src/: main.rs
chapters/ch03_common_concepts/: Cargo.toml
chapters/ch03_common_concepts/src/: main.rs
chapters/ch04_ownership/: Cargo.toml
chapters/ch04_ownership/src/: main.rs
chapters/ch05_structs/: Cargo.toml
chapters/ch05_structs/src/: main.rs
chapters/ch06_enums/: Cargo.toml
chapters/ch06_enums/src/: main.rs
chapters/ch07_modules/: Cargo.toml
chapters/ch07_modules/src/: main.rs
chapters/ch08_collections/: Cargo.toml
chapters/ch08_collections/src/: main.rs
chapters/ch09_error_handling/: Cargo.toml
chapters/ch09_error_handling/src/: main.rs
chapters/ch10_generics_traits_lifetimes/: Cargo.toml
chapters/ch10_generics_traits_lifetimes/src/: main.rs
chapters/ch11_testing/: Cargo.toml
chapters/ch11_testing/src/: main.rs
chapters/ch12_io_project/: Cargo.toml
chapters/ch12_io_project/src/: main.rs
chapters/ch13_functional_features/: Cargo.toml
chapters/ch13_functional_features/src/: main.rs
chapters/ch14_cargo_and_crates/: Cargo.toml
chapters/ch14_cargo_and_crates/src/: main.rs
chapters/ch15_smart_pointers/src/: main.rs
chapters/ch16_concurrency/: Cargo.toml
chapters/ch17_oop/: Cargo.toml
chapters/ch17_oop/src/: main.rs
chapters/ch18_patterns/: Cargo.toml
chapters/ch19_advanced/: Cargo.toml
chapters/ch20_final_project/: Cargo.toml
(+4 files in other folders)
